src/objects/TwilioConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Twilio App Config</description>
    <fields>
        <fullName>AccountSid__c</fullName>
        <label>AccountSid</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationSid__c</fullName>
        <label>ApplicationSid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthToken__c</fullName>
        <label>AuthToken</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Twilio Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Twilio Config</label>
</CustomObject>